[package]
name = "wasm-bindgen-rayon"
version = "0.1.0"
authors = ["Dramalf <dramalfcsc@gmail.com>"]
edition = "2021"
[workspace.dependencies]
wasm-bindgen = "0.2.84"
rayon = { version = "1.8.1", features = ["web_spin_lock"] }

[dependencies]
wasm-bindgen = { workspace = true }
rayon = { workspace = true }
crossbeam-channel = "0.5.9"
js-sys = "0.3.48"

[workspace]
members = ["demo"]

[features]
nightly = []
no-bundler = []

[package.metadata.docs.rs]
features = ["nightly"]
targets = ["wasm32-unknown-unknown"]
rustc-args = ["-C", "target-feature=+atomics,+bulk-memory"]
